--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -5,9 +5,9 @@
    "id": "fda2be1b-9dba-4c3c-8f6b-95febeadd3ba",
    "metadata": {},
    "source": [
-    "# Q1. my_tuple = ( (1, 2, 3), [4, 5, 6], (\"apple\", \"banana\", \"cherry\"), [7, 8, 9] )\n",
-    "# • Print all elements from my_tuple on a new line (using for loop)\n",
-    "# • Create a new tuple by concatenating the first and last elements of my_tuple"
+    "### Q1. my_tuple = ( (1, 2, 3), [4, 5, 6], (\"apple\", \"banana\", \"cherry\"), [7, 8, 9] )\n",
+    "### • Print all elements from my_tuple on a new line (using for loop)\n",
+    "### • Create a new tuple by concatenating the first and last elements of my_tuple"
    ]
   },
   {
