--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -1,13 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "fda2be1b-9dba-4c3c-8f6b-95febeadd3ba",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9011a9f-9b12-4e87-aeda-726d0f6e5826",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q1. my_tuple = ( (1, 2, 3), [4, 5, 6], (\"apple\", \"banana\", \"cherry\"), [7, 8, 9] )\n",
-    " • Print all elements from my_tuple on a new line (using for loop)\n",
-    " • Create a new tuple by concatenating the first and last elements of my_tuple -->"
+    " # Q1. my_tuple = ( (1, 2, 3), [4, 5, 6], (\"apple\", \"banana\", \"cherry\"), [7, 8, 9] ) \n",
+    " # • Print all elements from my_tuple on a new line (using for loop) \n",
+    " # • Create a new tuple by concatenating the first and last elements of my_tuple"
    ]
   },
   {
@@ -45,14 +47,16 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "2f83beae-3040-4d4b-8316-95aba441e1e0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85f6e367-9b13-44b8-9a71-f318c814350f",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q2. inventory = {\"The Great Gatsby\": {\"price\": 10.99, \"quantity\": 5}, \"Rich dad poor dad\": {\"price\":\n",
-    " 8.99, \"quantity\": 8}, \"Harry Potter\": {\"price\": 12.50, \"quantity\": 2}, }\n",
-    " • Add a new book in inventory using method and get all book titles using method\n",
-    " • Remove a book if it's out of stock -->"
+    " # Q2. inventory = {\"The Great Gatsby\": {\"price\": 10.99, \"quantity\": 5}, \"Rich dad poor dad\": {\"price\":\n",
+    " # 8.99, \"quantity\": 8}, \"Harry Potter\": {\"price\": 12.50, \"quantity\": 2}, }\n",
+    " # • Add a new book in inventory using method and get all book titles using method\n",
+    " # • Remove a book if it's out of stock"
    ]
   },
   {
@@ -100,18 +104,20 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "16f066fb-8582-48b5-9186-28a1101f7589",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7057491-09b9-4bea-b03f-5c5bb904684a",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q3. An ecommerce store stores information about its products in a nested dictionary. The outer\n",
-    " dictionary uses product IDs as keys, and the inner dictionary stores product details like name,\n",
-    " category, price, and stock quantity.\n",
-    " products = { 101: {\"name\":\"Laptop\", \"categor\": \"Electronics\", \"price\";: 1200, \"stock\": 50}, 102:\n",
-    " {\"name\": \"Shirt\", \"category\": \"Apparel\", \"price\": 25, \"stock\": 200}, 103: {\"name\": \"\";Coffee Maker\",\n",
-    " \"category\": \"Home Appliances\", \"price\": 80, \"stock\": 30} }\n",
-    " • Increase the stock of the \"Shirt\" product (add 50 more units)\n",
-    " • Add a new product (e.g., \"Smartphone\") -->"
+    " # Q3. An ecommerce store stores information about its products in a nested dictionary. The outer\n",
+    " # dictionary uses product IDs as keys, and the inner dictionary stores product details like name,\n",
+    " # category, price, and stock quantity.\n",
+    " # products = { 101: {\"name\":\"Laptop\", \"categor\": \"Electronics\", \"price\";: 1200, \"stock\": 50}, 102:\n",
+    " # {\"name\": \"Shirt\", \"category\": \"Apparel\", \"price\": 25, \"stock\": 200}, 103: {\"name\": \"\";Coffee Maker\",\n",
+    " # \"category\": \"Home Appliances\", \"price\": 80, \"stock\": 30} }\n",
+    " # • Increase the stock of the \"Shirt\" product (add 50 more units)\n",
+    " # • Add a new product (e.g., \"Smartphone\")"
    ]
   },
   {
@@ -178,13 +184,15 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "e7537bda-e242-4563-a138-dad79531b13e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8fbe5a6-db40-44f2-ae59-a2744a81ca4e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q4. You are given a list that contains some duplicate items. Remove the duplicates by converting the\n",
-    " list to a set.\n",
-    " shopping_list = [\"apple\", \"banana\", \"apple\", \"orange\", \"banana\", \"grape\"] -->"
+    " # Q4. You are given a list that contains some duplicate items. Remove the duplicates by converting the\n",
+    " # list to a set.\n",
+    " # shopping_list = [\"apple\", \"banana\", \"apple\", \"orange\", \"banana\", \"grape\"]"
    ]
   },
   {
@@ -216,18 +224,20 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "8650b6a5-8757-4afb-888e-4567cbd2d382",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "700cc758-5bd9-4ba5-b7a6-fa42f921be99",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q5. You are managing a list of students enrolled in two different courses. You need to perform\n",
-    " various set operations to understand the student enrollment. Task: Create two sets: one for students\n",
-    " in \"Course A\" and one for students in \"Course B\". Find the students who are in \"Course A\" but not in\n",
-    " \"Course B\" (difference). Find students who are only in one of the two courses (symmetric\n",
-    " difference). course_a = {\"John\";,\"Alice\", \"Bob\", \"David\"} course_b = {\"Alice\", \"Eve\",\"Charlie\",\n",
-    " \"David\"}\n",
-    " • Find students who are in Course A but not in Course B (difference)\n",
-    " • Find students who are only in one of the two courses (symmetric difference) -->"
+    " # Q5. You are managing a list of students enrolled in two different courses. You need to perform\n",
+    " # various set operations to understand the student enrollment. Task: Create two sets: one for students\n",
+    " # in \"Course A\" and one for students in \"Course B\". Find the students who are in \"Course A\" but not in\n",
+    " # \"Course B\" (difference). Find students who are only in one of the two courses (symmetric\n",
+    " # difference). course_a = {\"John\";,\"Alice\", \"Bob\", \"David\"} course_b = {\"Alice\", \"Eve\",\"Charlie\",\n",
+    " # \"David\"}\n",
+    " # • Find students who are in Course A but not in Course B (difference)\n",
+    " # • Find students who are only in one of the two courses (symmetric difference)"
    ]
   },
   {
@@ -290,18 +300,20 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "08bfb374-f70c-4687-8891-a8d6947ebac7",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb2dbb0-9b35-4d10-820b-0984d0b206b4",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q6. Write a Python program that calculates the sum of all even numbers between 1 and 50\n",
-    " (inclusive) using a for loop.\n",
-    " Hint\n",
-    " 1. Initialize a variable to hold the sum (e.g., sum_of_evens).\n",
-    " 2. Use a for loop to iterate through all numbers from 1 to 50.\n",
-    " 3. Inside the loop, check if the number is even.\n",
-    " 4. If the number is even, add it to sum_of_evens.\n",
-    " 5. After the loop finishes, print the total sum of all even numbers between 1 and 50. -->"
+    " # Q6. Write a Python program that calculates the sum of all even numbers between 1 and 50\n",
+    " # (inclusive) using a for loop.\n",
+    " # Hint\n",
+    " # 1. Initialize a variable to hold the sum (e.g., sum_of_evens).\n",
+    " # 2. Use a for loop to iterate through all numbers from 1 to 50.\n",
+    " # 3. Inside the loop, check if the number is even.\n",
+    " # 4. If the number is even, add it to sum_of_evens.\n",
+    " # 5. After the loop finishes, print the total sum of all even numbers between 1 and 50."
    ]
   },
   {
@@ -335,20 +347,22 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "4eb6d50b-89e0-4f2b-b6a8-df3893aaedd0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60053ef7-ccdd-4127-b3a2-78a88de7f5fa",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q7. Write a Python program that prints the multiplication table for a given number (between 1 and\n",
-    " 10) using a for loop.\n",
+    " # Q7. Write a Python program that prints the multiplication table for a given number (between 1 and\n",
+    " # 10) using a for loop.\n",
     "\n",
-    " Hint:\n",
-    " 1. Ask the user for a number between 1 and 10 .\n",
-    " 2. Use a for loop to iterate through the numbers from 1 to 10.\n",
-    " 3. For each iteration, calculate the product of the given number and the current number in the\n",
-    " loop.\n",
-    " 4. Print the result in a readable format (e.g., 5 x 1 = 5).\n",
-    " 5. Ensure the program works correctly for any number between 1 and 10. -->"
+    " # Hint:\n",
+    " # 1. Ask the user for a number between 1 and 10 .\n",
+    " # 2. Use a for loop to iterate through the numbers from 1 to 10.\n",
+    " # 3. For each iteration, calculate the product of the given number and the current number in the\n",
+    " # loop.\n",
+    " # 4. Print the result in a readable format (e.g., 5 x 1 = 5).\n",
+    " # 5. Ensure the program works correctly for any number between 1 and 10."
    ]
   },
   {
@@ -398,17 +412,19 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "e113c251-e5b1-4f7b-9fcd-b4557a22915b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a963d74-2056-4979-adb8-969c73aac135",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q8. Power of a Number\n",
-    " Write a Python program that takes a number and prints the powers of the number (starting from 1\n",
-    " to 10) using a while loop. For example, if the user inputs 3, the output should be:\n",
-    " 3^1 = 3\n",
-    " 3^2 = 9\n",
-    " 3^3 = 27\n",
-    " ... up to 3^10. -->"
+    " # Q8. Power of a Number\n",
+    " # Write a Python program that takes a number and prints the powers of the number (starting from 1\n",
+    " # to 10) using a while loop. For example, if the user inputs 3, the output should be:\n",
+    " # 3^1 = 3\n",
+    " # 3^2 = 9\n",
+    " # 3^3 = 27\n",
+    " # ... up to 3^10."
    ]
   },
   {
@@ -458,20 +474,22 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "49d1fe35-c6ae-4708-8646-4983485d5261",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54814b0a-89dc-4ba5-acba-18f5602b1090",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q9. Problem Statement: Write a Python program that takes an integer input from the user and\n",
-    " counts down from that number to 0. The program should display the current number at each step\n",
-    " until it reaches 0, at which point it should print a message indicating the countdown is finished\n",
-    " Output Hint:\n",
-    " Enter a number to start the countdown: 3\n",
-    " 3\n",
-    " 2\n",
-    " 1\n",
-    " 0\n",
-    " Countdown finished! -->"
+    " #  Q9. Problem Statement: Write a Python program that takes an integer input from the user and\n",
+    " # counts down from that number to 0. The program should display the current number at each step\n",
+    " # until it reaches 0, at which point it should print a message indicating the countdown is finished\n",
+    " # Output Hint:\n",
+    " # Enter a number to start the countdown: 3\n",
+    " # 3\n",
+    " # 2\n",
+    " # 1\n",
+    " # 0\n",
+    " # Countdown finished! "
    ]
   },
   {
@@ -518,20 +536,22 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "6ec4f504-eaa3-4b90-ad2a-e249e4f75b32",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13ac4900-8f36-4181-b7e3-b4b799798e23",
    "metadata": {},
+   "outputs": [],
    "source": [
-    " <!-- Q10. Write a Python program that takes an integer input n from the user and generates a right-\n",
-    " angled triangle pattern of stars (*) with n rows. The first row should contain 1 star, the second row 2\n",
-    " stars, the third row 3 stars, and so on until the nth row.\n",
-    " Ensure the stars in each row are separated by spaces, and each row starts on a new line.\n",
-    " Pattern:\n",
-    " *\n",
-    " **\n",
-    " ***\n",
-    " ****\n",
-    " ***** -->"
+    " # Q10. Write a Python program that takes an integer input n from the user and generates a right-\n",
+    " # angled triangle pattern of stars (*) with n rows. The first row should contain 1 star, the second row 2\n",
+    " # stars, the third row 3 stars, and so on until the nth row.\n",
+    " # Ensure the stars in each row are separated by spaces, and each row starts on a new line.\n",
+    " # Pattern:\n",
+    " # *\n",
+    " # **\n",
+    " # ***\n",
+    " # ****\n",
+    " # *****"
    ]
   },
   {
