--- a/Assignment5.ipynb
+++ b/Assignment5.ipynb
@@ -56,10 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "778ca792-5c2b-466d-9f1a-c3d3e20bb495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Orange contains 3 vowels.\n"
+     ]
+    }
+   ],
    "source": [
     "def count_vowels(s):\n",
     "   \n",
