--- a/Assiggmnet8.ipynb
+++ b/Assiggmnet8.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as npt\n",
-    "import seaborn as sns   #visualisation    visualisation is good plotline is good and code is easy \n",
+    "import seaborn as sns   \n",
     "import matplotlib.pyplot as plt"
    ]
   },
